kube/services/netpolicy/networkpolicy_pidgin_templ.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-pidgin
spec:
  podSelector:
    matchLabels:
      app: pidgin
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: pidgin
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: pidgin
      - podSelector:
          matchLabels:
            app: indexd
      - podSelector:
          matchLabels:
            app: peregrine
      - ipBlock:
           cidr: GEN3_CLOUDPROXY_IP/32

  policyTypes:
   - Ingress
   - Egress
